backend/test_log.txt
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
D:\berodu\SORIN\project\Newsletter\backend\src\test\java\com\kz\magazine\controller\ContentApiTest.java:148: error: method updateContent in class ContentService cannot be applied to given types;
                given(contentService.updateContent(any(Long.class), any(ContentUpdateRequestDto.class)))
                                    ^
  required: Long,ContentUpdateRequestDto,String
  found:    Long,ContentUpdateRequestDto
  reason: actual and formal argument lists differ in length
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 5s
3 actionable tasks: 1 executed, 2 up-to-date
